# app/Models/Task.php
@@ -6,6 +6,7 @@ use App\Enums\Priority;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\BelongsTo;
+use Illuminate\Database\Eloquent\Relations\BelongsToMany;
 
 class Task extends Model
 {
@@ -31,6 +32,12 @@ class Task extends Model
     public function user(): BelongsTo
     {
         return $this->belongsTo(User::class);
+    }
+    
+    public function categories(): BelongsToMany
+    {
+        return $this->belongsToMany(Category::class, 'task_categories')
+            ->withTimestamps();
     }
 
     public function markAsCompleted(): void
